glFusion ChangeLog

v1.1.0
------------
- Added MooTools sameheight javascript to extend bg of 3 column dynamic div layouts (Eric)
		public_html/layout/nouveau/js/gl_moosameheight.js
		public_html/layout/nouveau/header.thtml
		public_html/layout/nouveau/htmlheader.thtml
		public_html/layout/nouveau/leftblocks.thtml
		public_html/layout/nouveau/rightblocks.thtml

- Consolidated all MooTools libraries - now part of core. Moved
  to public_html/javascript/ directory.
- New theme API themename_headerVars(&$template). Allows a theme
  to set header variables.
- New install / upgrade system - allows migration from Geeklog
- Added new GVERSION define
- Fix for date formatting in RSS fields
- Renamed the syndication feed type "glfusion" to "article"
- New option "All Frontpage Stories" for article feeds: skip stories that have
  the "Show only in topic" option set
- Better support for plugin messages
- Webservices tweaks to improve support for more clients.
- Ensure name and email are properly populated on comment listings.
- Moved CAPTCHA, Forum, and FileMgmt configuration to the core configuration
  system.
- Updated default header logo
- Implemented glFusion CSS layout driven header / footer functions.
- Bumped version number to 1.1.0svn

v1.0.1
------
- Added a new configuration option to prevent SQL errors
  in the event there is a unknown site issue. This will
  allow the site to continue to load and possibly help
  in diagnosing the problem.
        private/system/databases/mysql.class.php
        private/system/lib-database.php
        public_html/siteconfig.php.dist

- Tweaks to upgrade / install SQL to support glFusion
        private/sql/mysql_tableanddata.php
        private/sql/updates/mysql_1.4.1_to_1.5.0.php

- Fixed a small style issue
        public_html/layout/nouveau/style.css
        public_html/layout/nouveau/js/gl_mooslide.js

- Updated install SQL to point to proper web site
        private/sql/mysql_tableanddata.php
