@@ -2,6 +2,7 @@
 
 [theme]
 name = "nouveau"
-author = "Eric Warren - glFusion"
+author = "Eric Warren"
 url = "http://www.glfusion.org"
-download = "included in glFusion"
+download = "included with glFusion CMS"
+description = "Nouveau is a fixed/fluid width, blue/gray Web 2.0 theme that includes additional typography styles and other enhancements. It ships as part of the glFusion CMS."  
